Issue Fixed #6886 (Local Dropdown Overlapping on Mobile View issue fixed)

--- a/packages/Webkul/Admin/src/Resources/assets/sass/partials/_default.scss
+++ b/packages/Webkul/Admin/src/Resources/assets/sass/partials/_default.scss
@@ -1023,3 +1023,17 @@ body {
         }
     }
 }
+
+@media only screen and (min-width: 280px) and (max-width: 420px) {
+    .grid-container {
+        .grid-top {
+            .datagrid-filters {
+                .filter-left {
+                    div {
+                        display: contents !important;
+                    }
+                }
+            }
+        }
+    }
+}
